bug #44847. -remote support for unix.  r=dmose sr=shaver