widget/src/xremoteclient/nsXRemoteClientCID.h
@@ -1,0 +1,24 @@
+/*
+ * The contents of this file are subject to the Mozilla Public
+ * License Version 1.1 (the "License"); you may not use this file
+ * except in compliance with the License. You may obtain a copy of
+ * the License at http://www.mozilla.org/MPL/
+ * 
+ * Software distributed under the License is distributed on an "AS
+ * IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
+ * implied. See the License for the specific language governing
+ * rights and limitations under the License.
+ * 
+ * The Original Code is mozilla.org code.
+ * 
+ * The Initial Developers of the Original Code are Christopher
+ * Blizzard and Jamie Zawinski.  Portions created Christopher Blizzard
+ * are Copyright (C) 2000 Christopher Blizzard.  Portions created by
+ * Jamie Zawinski are Copyright (C) 1994 Netscape Communications
+ * Corporation.  All Rights Reserved.
+ * 
+ * Contributor(s): 
+ */
+
+#define NS_XREMOTECLIENT_CONTRACTID                 \
+  "@mozilla.org/xremote_client;1"
